--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </li>
 
               <li>
-                <a href="#" class="navbar-link">Contact</a>
+                <a href="https://xeroanjing.github.io/pepex" class="navbar-link">Contact</a>
               </li>
 
             </ul>
@@ -973,7 +973,7 @@
                       <ion-icon name="ellipsis-horizontal"></ion-icon>
                     </button>
 
-                    <button class="add-to-whishlist" data-whishlist-btn>
+                    <button class="add-to-whishlis" data-whishlist-btn>
                       <ion-icon name="heart"></ion-icon>
                     </button>
                   </div>
